# gsd-cli.rb

./: .gitignore  .rubocop.yml  .travis.yml  Cakefile  Gemfile  LICENSE  Pipfile  README.md  README.md.old  Rakefile  coffeelint.json  gsd-cli.gemspec  oclif.manifest.json  package-lock.json  package.json  pyproject.toml  setup.py  snapcraft.yaml
.circleci/: config.yml
.github/workflows/: ci.yml
coffee-dist/: index.js.map  server_builder.js  server_builder.js.map
coffee-dist/commands/: bootstrap.js  bootstrap.js.map  install.js  install.js.map  update.js  update.js.map
coffee-dist/games/: generic.js  generic.js.map  minecraft.js.map  rust.js  rust.js.map  scp.js.map  sdtd.js.map  srcds.js  srcds.js.map
coffee-src/commands/: bootstrap.coffee  update.coffee
coffee-src/games/: rust.coffee  scp.coffee  sdtd.coffee
coffee-test/configs/: gmod.json
conf/: rust.conf  sdtd.xml  supported_games.yml
configs/: gmod.json  minecraft.json  rust.json  sdtd.json  tf2.json
gsd_cli/: hello.py
gsdcli/: __main__.py  _servers.yaml  gsdcli.py
lib/: cli.rb  daemonize.rb  deploy.rb  game_template.rb  generic_server.coffee  helpers.rb  index.coffee  server_builder.coffee  srcds_server.coffee
lib/cli/: game_hash.rb  install.rb  update.rb
lib/commands/: install.coffee  launch.coffee  update.coffee
old/: Rakefile  gsd-cli.gemspec
spec/: helpers_spec.rb
src/: games.js  server_builder.coffee  supported-games.js
test/: bootstrap.test.coffee  index.test.coffee  index.test.js  install.test.coffee  update.test.coffee
tests/: test_gsd_cli.py  test_gsdcli.py
(+51 files in other folders)
