[tool.poetry]
name = "gsdcli"
version = "0.1.1"
description = "A cli for installing game servers"
authors = ["egee-irl <brian@egee.io>"]

[tool.poetry.dependencies]
python = "^3.7"
Click = "^7.1.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.4.4"

[tool.poetry.scripts]
gsd-cli = "gsdcli.gsdcli:gsdcli"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
